apsa 2015 additions complete

--- a/escrito/urge04.tex
+++ b/escrito/urge04.tex
@@ -48,7 +48,30 @@
 
  %Inspection of original data on urgency incidence to investigate the decision to declare or not legislation urgent, an aspect that has received less scholarly attention. Analysis of original data distinguishes messages in the 1998--2014 period that set forth urgency (40\% of 20 thousand), messages that changed the deadline (29\%), and messages to withdraw the bill's urgency (31\%). Isolating bill and session traits that correlate with urgencies sheds light on the president's power to constantly obstruct the legislative agenda and its use in executive-legislative negotiation with separation of power. 
 
+% comentarios de Calvo
+%Comentarios a Magar: Presidential obstruction of the agenda in Chile’s Congress
+%Buenísimo el paper. Siempre me pareció muy interesante el tema de las urgencias y no existen análisis sistemáticos de estos procesos. Tengo muchas ganas de ver el libro completo una vez que esté terminado. 
+%En términos generales me gusta mucho la perspectiva y el modelo es interesante. El juego está descripto con poco detalle (supongo que eso viene en otros capítulos) así que la presentación de la Figura 2 y su discusión en las páginas 10 y 11 siguen siendo un poco crípticos. La intuición se entiende, pero el hecho de que en distintos sistemas k y o toman distintos valores y producen distintos equilibrios necesita más fundamentación (de nuevo, asumo que eso viene de capítulos anteriores del libro). 
+%El capítulo preguntando porque los legisladores toman en consideración las “urgencias” cuando a diferencia de Brasil o Uruguay no existe un mecanismo de sanción si ellos “shirk”. No tenemos respuesta a lo largo del capítulo y mi impresión es que se necesita un poco mas de data cualitativa (algunas entrevistas o discusiones de diarios de sesiones) que digan porque los legisladores atienden al pedido del presidente. Esto quizá afecte como pensas el modelo de la Figura 2 y te convendría resolverlo antes de cerrar el capítulo.
+%Mi preocupación principal está en la forma en que usas la data y como estimas el modelo. Las “urgencias” son un mecanismo para presionar al Congreso para que actúe y, por tanto, tienen que ser modelados con una función de tiempo. Lo más natural para mí sería utilizar un “mixture” model que mide al mismo tiempo la “tasa” de aprobación y el “tiempo” de aprobación (te anexo un artículo en el cual hacemos esto para el caso de Uruguay con Chasquetti). Entiendo que las “urgencias” son una forma de presionar al Congreso para resolver favorablemente, pero la discusión sobre el “scheduling” del plenario también refiere al problema del costo de oportunidad de tratar los proyectos del Presidente en lugar de los proyectos de los legisladores. Sin embargo, todos los Congresos tienen mecanismos para permitir que los “pet projects” sean aprobados cuando hay tiempos limitados en el plenario. En Brasil las comisiones pueden dar aprobación final a una gran cantidad de projectos (“terminativa”) para evitar consumir el tiempo del plenario. En Argentina el artículo 133 del reglamento permite votar en paquete proyectos que tienen dictamen de comisión y no tienen objeciones ni enmiendas. Por lo tanto, existen cambios en las reglas que les permiten a los legisladores “circunvent” las restricciones de tiempo del plenario. Para mi es necesario modelar el éxito relativo y el tiempo de aprobación para ver que es lo que están haciendo las urgencias.
+%Esto también quiere decir que el modelo de estimación debería ser al nivel de proyecto de ley y no un OLS con sumas de instancias. Sino me equivoco tenes toda esa data, el N es mas grande y además te permite combinar data a nivel de proyecto, de legislador y de Congreso. Así que a mi juicio conviene cambiar la estrategia de estimación. 
+%Por lo demás, me parece un excelente artículo y me muero de ganas de ver el libro.
+%Abrazo. E.  
+
+
+
 \onehalfspacing
+
+Part 3 intro presents urgency in 5 countries. 
+
+Puzzle: Why would a president talk cheaply incredibly often? How could cheap talk generate compliance by Congress? Study of Chilean urgency suggests that such cheap talk may actually involve negative side payments that could explain its usage and consequences...
+
+% Joy comments
+% Need to explain tables better
+% Need to explain figures better
+% Get interviews to offer intuitions on what numbers can't explain
+% EMM: should simplify argument---absent a cost given r=x_0 and schadule unchanged, k>o necessary.
+
 
 \noindent Part I of the book studied executive-legislative bargaining in presidential democracies with a standard separation of power framework, giving presidents a reactive power only, the authority to veto legislation. Part II gave the president pro-active legislative power, the authority to enact policy unilaterally pending assembly approval. This chapter and the next explore another pro-active presidential power: the ability to interfere with legislative scheduling from the executive branch. 
 
