--- a/escrito/tmp.tex
+++ b/escrito/tmp.tex
@@ -1,51 +1,12 @@
-% Created 2014-11-21 Fri 14:03
-\documentclass[11pt]{article}
-\usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
-\usepackage{fixltx2e}
-\usepackage{graphicx}
-\usepackage{longtable}
-\usepackage{float}
-\usepackage{wrapfig}
-\usepackage[normalem]{ulem}
-\usepackage{amsmath}
-\usepackage{textcomp}
-\usepackage{marvosym}
-\usepackage{wasysym}
-\usepackage{amssymb}
-\usepackage{hyperref}
-\tolerance=1000
-\author{Eric Magar}
-\date{\today}
-\title{tmp}
-\hypersetup{
-  pdfkeywords={},
-  pdfsubject={},
-  pdfcreator={Emacs 23.4.1 (Org mode 8.1.2)}}
-\begin{document}
 
-\maketitle
-\tableofcontents
+In the absence of a formal penalty for inaction---like Uruguayan reversion to $x_1$, or placing Brazilian legislative business on hold until the urgency is heeded---only a sizeable cost $k$ remains to prevent the Chilean assembly ignoring executive proposals: unless $k>o$, ignoring dominates rejecting an undesirable proposal. Like vetoes, explicit rejections can have position taking value, as shown in chapter \ref{ch:posModel}. And, the next analysis shows, cost $k$ may be key to remove (or, at least, minimize) executive disadvantage in the presence of opportunity costs. 
 
-This is a test of \LaTeX{} export from org mode. 
+Contrasting the Chilean and Uruguayan versions of the game in Figure \ref{f:chiUruEql} reveals how the size of $k$ relative to $o$ and the reversion point determine who is advantaged by the urgency authority. The Uruguayan institution in the right panel necessitates an urgent presidential proposal, or else the $r=x_1$ reversion does not kick in, and the game becomes identical to Chile's. The Chilean institution, in the left panel, works with or without an urgency message. Proceeding backwards in the Chilean tree, the legislator compares relative values of $x_1$ and $x_0$, net of possible costs. With $x_0$, and costs $o$ and $k$ set exogenously, a baseline for the legislator's optimal reaction to the president's proposal can be derived. Giving players specific preferences relative to the status quo aides in seeing the bargaining logic and institutional effects. An interesting example is $x_0 < l < p$, leaving room for inter-branch compromise in policy, analyzed graphically below the game tree in the figure. (I do not derive the full equilibrium, which is in line with the model in chapter \ref{ch:posMod}.) 
 
-\section{This is a section}
-\label{sec-1}
+%This observation dovetails with previous characterizations of the Chilean urgency authority. \citet{berrios.gamboa.fiscChile.2006} advance the notion that, in spite of reversion $r=x_0$, the assembly may indeed face political costs of ignoring urgency messages on salient proposals. 
 
-\subsection{A subsection}
-\label{sec-1-1}
+%The president's qualification of the urgency offers some elements to investigate this last point. In line with \citet{aleman.navia.UrgChi.2009}, I relate cost $k$'s size to the urgency degree---higher degrees let the president make louder statements to raise issue salience. So, all else equal, a `two week' notice has a larger $k$ (or, at least, never lower) than a `one month, and an `act now' message has a larger $k$ (or, at least, never lower) than either other. Urgency type frequency, in fact, reveals a tendency to rely less often on more urgent messages (descriptive data is presented in the next section). `Act now' notices were roughly 3 to 5 times less frequent than `two week' ones in a recent 16-year period. The frequency differential between `two week' and `one month' notices is less sharp, but a tendency is distinguishable. 
 
-\begin{enumerate}
-\item Item 1
-\label{sec-1-1-0-0-1}
-\item Item 2
-\label{sec-1-1-0-0-2}
-\item Item 3
-\label{sec-1-1-0-0-3}
+%As urgency goes up, so does the size of cost $k$, monotonically. 
 
-In this \textbf{bold}?
-\end{enumerate}
-\subsection{Another subsection}
-\label{sec-1-2}
-% Emacs 23.4.1 (Org mode 8.1.2)
-\end{document}
+
