Chile chapter ready and urge05 pasted to book master

--- a/escrito/urge05.tex
+++ b/escrito/urge05.tex
@@ -66,7 +66,7 @@
 
 \onehalfspacing
 
-\noindent Threats are promises to inflict harm on someone unless he or she transfers welfare to whoever stated the threat. From an economic perspective, action in accordance with the threatener's wishes should follow so long as the harm exceeds the welfare transfer demanded---else the threatened person is better off enduring the penalty. Empty threats are those failing to fulfil the large penalty condition. Evidence of frequent compliance to empty threats would pose a puzzle for this strategic stylization of power relations \citep{dahl.ConceptPower1957,friedrich.1941,schelling.1960}. 
+\noindent Threats are promises to inflict harm unless the receiver transfers welfare to whoever stated the threat. From an economic perspective, action in accordance with the threatener's wishes should follow so long as the harm exceeds the welfare transfer demanded---else the threatened person is better off enduring the penalty \citep{dahl.ConceptPower1957,friedrich.1941,schelling.1960}. Empty threats are those failing to fulfil the large penalty condition. Finding frequent compliance to empty threats would pose a puzzle for this strategic stylization of power relations. This chapter detects such a puzzle in urgency authority incidence in Chile. 
 
 This chapter compares the urgency authority in Chile to those found in a few other constitutions of the Americas. A president with urgency authority can remove obstacles preventing floor consideration of legislative proposals. One striking finding of this institutional contrast is how Chilean urgency urgency messages carry no formal penalty whatsoever for non-compliance, and therefore have the status of empty threats to Congress, otherwise known as cheap talk. 
 
