post gel conference

--- a/escrito/urge07.tex
+++ b/escrito/urge07.tex
@@ -43,7 +43,7 @@
 
 \begin{document}
 
-\title{Presidential obstruction of the \\agenda in Chile's Congress\thanks{Prepared for presentation at the Instituto de Ciencia Pol\'itica, Universidad Cat\'olica, Santiago de Chile. The authors are grateful to Ernesto Calvo and Valeria Palanza for insights and to Jos\'e Antonio Cheibub, Gisela Sin, and participants at the Comparative Politics Workshop of the University of Illinois at Urbana-Champaign for useful comments and critiques; to the Department of Political Science at Washington University in St.\ Louis, where much of this work was done as visiting scholar; and acknowledges financial support from the Asociaci\'on Mexicana de Cultura A.C.\ and CONACYT's Sistema Nacional de Investigadores. The author bears sole responsibility for mistakes and shortcomings in the study.}}
+\title{Presidential obstruction of the \\agenda in Chile's Congress\thanks{Prepared for presentation at the Instituto de Ciencia Pol\'itica, Universidad Cat\'olica, Santiago de Chile. The authors are grateful to Ernesto Calvo, Jos\'e Antonio Cheibub, and participants at the Comparative Politics Workshop of the University of Illinois at Urbana-Champaign for useful comments and critiques. Eric Magar acknowledges financial support from the Asociaci\'on Mexicana de Cultura A.C.\ and CONACYT's Sistema Nacional de Investigadores. The authors bear sole responsibility for mistakes and shortcomings in the study.}}
 \author{Eric Magar \\ ITAM \and
         Valeria Palanza \\ Univ.\ Cat\'olica de Chile \and  
         Gisela Sin \\ Univ.\ of Illinois, Urbana-Champaign 
@@ -51,11 +51,13 @@
 \date{\today}
 \maketitle
 
-\begin{center} \textbf{$\rightarrow$~~Preliminary draft~~$\leftarrow$} \\ (please inquire for new version, \small{\url{emagar@itam.mx}})  \end{center}
+% \begin{center} \textbf{$\rightarrow$~~Preliminary draft~~$\leftarrow$} \\ (please inquire for new version, \small{\url{emagar@itam.mx}})  \end{center}
 
 \begin{abstract}
 \noindent Unlike presidents with mostly (or only) reactive formal powers in the legislative arena, Chile's enjoys formidable proactive ones. Among them is the urgency authority. A bill declared urgent confronts legislators with a short deadline to discuss and vote it. Urgency, research has shown, correlates with the odds of bill passage, and most executive-initiated legislation becomes urgent at some stage. Comparing the Chilean urgency authority to others in the region reveals the absence of a penalty for non-compliance. Urgency messages in Chile appear as cheap talk unless presidents can persuade legislators that costs indeed exist. Inspecting original data on the decision to declare legislation urgent sheds light on the disconnect between frequent usage and institutional void. I do not answer what makes the urgency consequential satisfactorily, but the attempt reveals suggestive patterns and raises puzzles worth investigating further. 
 \end{abstract}
+
+% para ges y valeria: opción 1 es usar shareLatex; opción 2 es buscar sugerencias para colaborar en web via word; opción 3 es editar en word dándoles unas instrucciones básicas de qué no tocar; opción 4 es sacar los párrafos de texto con menciones de tables y figures (que deben ver en el pdf)... voy por ésta ahora
 
  %Inspection of original data on urgency incidence to investigate the decision to declare or not legislation urgent, an aspect that has received less scholarly attention. Analysis of original data distinguishes messages in the 1998--2014 period that set forth urgency (40\% of 20 thousand), messages that changed the deadline (29\%), and messages to withdraw the bill's urgency (31\%). Isolating bill and session traits that correlate with urgencies sheds light on the president's power to constantly obstruct the legislative agenda and its use in executive-legislative negotiation with separation of power. 
 
@@ -85,44 +87,28 @@ Yet inspection of recent urgency message incidence reveals a strikingly high fre
 
 The paper proceeds thus. Section 1 briefly reviews empirical studies of the urgency authority, spotting a major obstacle to measure its effects. Section 2 offers a theoretical framework to compare the urgency authority across constitutions. Highlighting two key institutional features---the reversionary policy and reversionary schedule applicable when the assembly misses the urgent deadline---reveals a flaw in the Chilean (and possibly Mexican) variants, compared to the Brazilian, Colombian, and Uruguayan: urgency messages are cheap talk. The framework also shows that the existence of indirect costs---what \citet{neustadt.1990} calls \emph{presidential persuation}---is one way to restore the Chilean institution's bite. Section 3 looks at urgency degrees, another feature of Chile's institution, and speculates about their potential to render the urgency authority consequential. Section 4 introduces an original dataset of bill histories and urgency messages in Chile in the 1998--2014 period. Many puzzles arise from the descriptive statistics on bill initiation, bill passage, and urgency usage. One is the disconnect between a possibly inconsequential institution and the remarkable frequency of its use. Section 5 inspects committee reporting following different types of urgency messages. Analysis shows that, far from inconsequential, the urgency authority indeed lets Chilean presidents determine legislative scheduling. Section 6 offers closing remarks. 
 
-\section{El proceso de las indicaciones}
+\section{Reading and amending proposals}
 
-Para estilizar la secuencia de votación e indicación de un proyecto, consideramos un ejemplo simple. Se introduce un proyecto que contiene tres artículos. 
+We stylize the evolution of a legislative proposal, from introduction to passage. We illustrate with the simple example of a proposal that gives rise to two amendments, one upon referral to the standing committee, another later in the process. The proposal consists of three articles, as follows. 
 
-\begin{itemize}
-\item Art 1. Se abre partida de \$200
-\item Art 2. Se la divide por mitades
-\item Art 3. Una mitad para alumnos, la otra para maestros
-\end{itemize}
+\begin{center}
+\noindent \begin{tabular}{llc}
+       & original version                   & amendments                                       \\ \hline
+Art 1. & appropriate \$200                  & \$300                                            \\
+Art 2. & split in two equal parts           & $(\frac{1}{4}, \frac{3}{4})$ split \\
+Art 3. & one for students, one for teachers & ---                                              \\
+\end{tabular}
+\end{center}
 
-\noindent Si se aprobara, habría \$100 para maestros y alumnos. Si la mayoría quisiera entregarle \$150 a los maestros, podría hacer una indicación al art.\ 1, aumentando la partida a \$300. Problema: el único que puede hacerla en Chile es el ejecutivo. Si Hacienda se negase a gastar más, aún queda la ruta distributiva: menos para los alumnos, más para los maestros. Basta una enmienda al segundo artículo para dejar la distribución en $\frac{1}{3}$ y $\frac{2}{3}$. 
+\noindent If approved, students and teachers receive a \$100 grant each. Adding tension, assume that the C\'amara majority has committed \$150 to teachers. An amendment (\emph{indicación} in Chilean legislative  parlance) to art.\ 1 is therefore presented, increasing the appropriation to meet the commitment. One problem arises: only the executive is entitled to introduce legislation (and amendments to legislation) increasing spending. The committee chair decides on the admissibility of amendments on such grounds---a decision that the C\'amara's presiding officer can override.\footnote{Congress' organic law (arts.\ 24 and 25) might leave discretion to committee chairs and presiding officer to declare amendments inadmissible. Non-germane amendments, or that increase spending, or those falling in areas of exclusive executive initiative, are explicitly mentioned as inadmissible.} 
 
-Notación:
-\begin{itemize}
-\item $p$ es el proyecto
-\item $q$ es el status quo (todos reciben \$0)
-\item $p_1$ es proyecto con art.\ 1 indicado
-\item $p_2$ es proyecto con art.\ 2 indicado
-\item $p_{12}$ es proyecto con arts.\ 1 y 2 indicados
-\end{itemize}
-
-La negociación procede así. Si la comisión de Hacienda admitiera la indicación al art.\ 1, el primer informe contaría con el proyecto $p$ y la versión modificada $p_1$. La discusión en general es un voto $p$ vs.\ $q$ primero. Si ganara $p$ (en algunos casos por supermayoría), seguiría un voto por la adminisilidad de la indicación, resultando $p1$ si ganara, $p$ si perdiera.
-
-Regresa a comisión para un segundo informe. En él, se podría introducir la enmienda del art.\ 2, o $p_2$. La Figura \ref{f:agendaUrg} estiliza el proceso. Lo fundamental es que las urgencias sumas y de discusión inmediata (en Cámara, por lo menos) hacen que se prescinda del segundo informe y su duscusión. Así que urgencia = closed rule. [Hay que regresar a ley org. y reglamento para ver si la caricatura es acertada.]
-
-Un perfil de preferencia para ilustrar podria ser:
-\begin{itemize}
-\item La mayoría está cerca de los maestros y ordena las alternativas $p_{12}>p_{2}>p_{1}>p>q$ (de mejor a peor)
-\item El gobierno:  $p>q>p_2>p_1>p_{12}$.
-\end{itemize}
-
-
+This is a form of ex-ante veto: if unwilling to appropriate extra money, the presideingt officer can simply declare the amendment inadmissibile. In which case, the distributive route remains practicable: less for students, more for teachers. An amendment to art.\ 2, such that teachers get three-fourths of the \$200 appropriation, honors the commitment---at the students' expense. By leaving spending untouched, it might be harder for the presiding officer to argue in favor of not admitting the second amendment. 
 
 
 \begin{sidewaysfigure}
   \centering
     \begin{tikzpicture}
-      \node[text width=10cm, text centered, anchor=north,fill=white] at (8.8125,-11) {\textbf{Final}}; 
+      \node[text width=10cm, text centered, anchor=north,fill=white] at (8.8125,-11) {\textbf{End}}; 
       %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
       \draw[dashed] (0.5,-10.8) -- (20,-10.8);
       %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -151,7 +137,7 @@ Un perfil de preferencia para ilustrar podria ser:
             (14,-9.25) -- (o11)
             (14,-9.25) -- (o12);
       \draw[dashed] (0.5,-8.8) -- (20,-8.8);
-      \node[text width=4cm, anchor=north west,fill=white] at (16,-9) {\textbf{Disc.\ particular:} sala sólo vota artículos con indicaciones}; 
+      \node[text width=4cm, anchor=north west,fill=white] at (16,-9) {\textbf{2nd reading:} plenary votes amended articles only (\emph{disc.\ particular})}; 
       %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
       \node[below] at (1,-8) (i21) {$p$}; 
       \node[below] at (3,-8) (i22) {$p_2$}; 
@@ -166,10 +152,10 @@ Un perfil de preferencia para ilustrar podria ser:
             (13,-7.25) -- (i25)
             (13,-7.25) -- (i26);
       \draw[dashed] (0.5,-6.8) -- (20,-6.8);
-      \node[text width=4cm, anchor=north west,fill=white] at (16,-7) {\textbf{2do informe:} indicaciones en comisión o en sala}; 
+      \node[text width=4cm, anchor=north west,fill=white] at (16,-7) {\textbf{2nd report:} committee and plenary amendments}; 
       % %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
       \draw[dashed] (0.5,-5.8) -- (20,-5.8);
-      \node[text width=10cm, text centered, anchor=north,fill=white] at (8.8125,-6) {\textbf{Con urgencia, el proceso termina aquí}}; 
+      \node[text width=10cm, text centered, anchor=north,fill=white] at (8.8125,-6) {\textbf{With urgency, process ends here}}; 
       %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
       \node[below] at (2,-5) (g11) {$p$}; 
       \node[below] at (7.25,-5) (g12) {$p_1$}; 
@@ -185,7 +171,7 @@ Un perfil de preferencia para ilustrar podria ser:
             (11.8125,-2.75) -- (g3)
             (11.8125,-2.75) -- (g4);
       \draw[dashed] (0.5,-2.3) -- (20,-2.3);
-      \node[text width=4cm, anchor=north west,fill=white] at (16,-2.5) {\textbf{Disc.\ general:} sala vota admisibilidad del proyecto e indicaciones}; 
+      \node[text width=4cm, anchor=north west,fill=white] at (16,-2.5) {\textbf{1st reading:} plenary votes to admit project then any amendments (\emph{discusión general})}; 
       %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
       \node[below] at (5.8125,-1) (i11) {$p_1$}; 
       \node[text width=2cm, text centered] at (5.8125,-1.75) {\footnotesize{(admissible)}}; 
@@ -194,13 +180,32 @@ Un perfil de preferencia para ilustrar podria ser:
       \draw (8.8125,-.25) -- (i11)
             (8.8125,-.25) -- (i12);
       \draw[dashed] (0.5,.2) -- (20,.2);
-      \node[text width=4cm, anchor=north west,fill=white] at (16,0) {\textbf{1er informe:} pdtes comisión/cámara tienen veto \emph{ex-ante} sobre indicaciones}; 
+      \node[text width=4cm, anchor=north west,fill=white] at (16,0) {\textbf{1st report:} comm.\ chair and presiding officer have \emph{ex-ante} veto on amendments}; 
       %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-      \node[text width=10cm, text centered, anchor=north,fill=white] at (8.8125,1) {\textbf{Inicio}}; 
+      \node[text width=10cm, text centered, anchor=north,fill=white] at (8.8125,1) {\textbf{Start}}; 
       %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     \end{tikzpicture}  \\
-\caption{Stylization of the voting agenda. Notación: $p$ es un proyecto; $q$ el status quo; $p_1$, $p_2$ y $p_{12}$ son, respectivamente, enmiendas al primer artículo del proyecto, al segundo o a ambos. Vea el texto.}\label{f:agendaUrg}
+\caption{Stylization of the voting agenda. Notation: $p$ is a project; $q$ the status quo; $p_1$, $p_2$, and $p_{12}$ are amendments, respectively to the first article, the second, or both. See text.}\label{f:agendaUrg}
 \end{sidewaysfigure}
+
+Notation eases exposition of Chile's legislative process. The three-article project is $p$, and $q$ the status quo (i.e., students and teachers get \$0 from this particular subsidy). Subindexing $p$ distinguishes versions with articles amended: $p_1$ with art.\ 1 amended, $p_2$ with art.\ 2 amended, and $p_{12}$ with both articles amended. Negotiation proceeds in four steps (schematized in Figure \ref{f:agendaUrg}).\footnote{See the C\'amara's standing rules (reglamento), especially arts.\ 118--189.} 
+
+\begin{enumerate}
+\item The question of amendment $p_1$'s admissibility into the \textbf{first report} starts it all. The choice is by the chamber's presiding officer, who has final authority to overturn the committee chair's earlier decision. Admitting $p_1$ substantially complicates down the tree. 
+\item The bill's \textbf{first plenary reading} follows (rules call it \emph{discusi\'on general}). The question here is whether the full project should be admitted for consideration or not, ending the legislative process at the status quo: $p$ v. $q$. Next, a vote to also admit the amendment---if any---follows. Project $p_1$ (amendment admitted) or $p$ (not) is immeadiately referred back to committee for a second report. 
+\item If the committee concurs with the floor, then the \textbf{second report} is the outcome of the first reading. But new amendments can be introduced, in committee or by private diputados (with one-third plenary backing). The committee chair and presiding officer can fail to accept these amendments too. For the sake of simplicity, the choice here is just on art.\ 2, although there a many other possibilities---different redefinitions, adding articles, or deleting them. When amended, the second report will be $p_2$ when the outcome of the first reading was $p$, and will be $p_{12}$ when it was $p_1$. 
+\item The \textbf{second reading} proceeds one article at a time (\emph{discusi\'on particular}). Importantly, the reading excludes the subset of articles that were not amended/added/removed in previous steps. This subset (which may include every article if none were amended) is considered adopted with no plenary vote. Rejecting art.\ 1's amendment makes the project lose subindex 1; likewise with art.\ 2. So when $p_{12}$ is the second report, the plenary can accept one amendment, the other, both, or neither---as portrayed in the bottom row of Figure \ref{f:agendaUrg}. 
+\end{enumerate}
+
+An important element is how the process can be shortened when the proposal is declared urgent. The urgency is a form of restrictive procedure. When the executive issues a two week or act now message, \emph{the bill receives no second report} and both plenary readings occur at once. The key here is how urgencies preclude the second round of amendments. 
+
+Had the presiding officer allowed $p_1$ in, plenary voting on its admissibility becomes the final vote on its adoption. At it most restrictive---when the presiding officer removed $p_1$---the plenary is presented with a take-it-or-leave-it urgent proposal $p$. The Chilean executive is therefore entitled to act as the Rules committee in the U.S.\ House, determining which bills receive a closed rule for plenary consideration. [Hay que regresar a ley org. y reglamento para ver si la caricatura es acertada]. 
+
+Un perfil de preferencia para ilustrar podria ser el siguiente:
+\begin{itemize}
+\item La mayoría está cerca de los maestros y ordena las alternativas $p_{12}>p_{2}>p_{1}>p>q$ (de mejor a peor)
+\item El gobierno:  $p>q>p_2>p_1>p_{12}$.
+\end{itemize}
 
 
 
@@ -344,7 +349,7 @@ And key for our paper is whether or not non-compliance costs different from zero
 Presidential power is the power to persuade ---Neustadt\footnote{\citet[][11]{neustadt.1990}}
 \end{center}
 
-The constitution (art.\ 74) stipulates that the president can urge action on any bill (not just executive proposals) at any stage of the legislative process. The chamber receiving the urgency message is compelled to ``discuss and vote'' the bill before a deadline. The exception are urgency messages raised over bills in conference committee to resolve inter-cameral differences, requiring timely action from the committe and then each chamber.
+The constitution (art.\ 74) stipulates that the president can urge action on any bill (not just executive proposals) at any stage of the legislative process. The chamber receiving the urgency message is compelled to ``discuss and vote'' the bill before a deadline. The exception are urgency messages raised over bills in conference committee to resolve inter-cameral differences, requiring timely action from the conference and then each individual chamber.
 
 The congressional organic law (arts.\ 26 and 27) defines the breadth of the interference, giving the president a choice of sending `one month' (\emph{urgencia simple} or 30 days), `two week' (\emph{urgencia suma} or 15 days), or `act now' (\emph{discusión inmediata} or 6 days) notices. The organic law was amended in July 2010, four months into the newly elected Legislature and concurrent presidential administration, substantially relaxing the deadlines for the `act now' and `two week' urgencies, originally set at 10 and 3 days, respectively. `One month' urgencies remained unchanged. Issuing maximal urgency in the right circumstances---an act-now message attached to a bill in conference before 2010---gave each instance just one day to act: one for the conference to report a compromise bill, and one for each chamber to sequentially consider and push the bill to the floor for a vote (congressional practice is well summarized by the library of Congress at \url{http://www.bcn.cl/ecivica/formacion/}.) The president may remove the urgency at will, with immediate effects. Urgency messages expire at the end of the ordinary period on March 10th every year. 
 
